[package]
name = "swu_network_custom_login"
version = "2.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
url = "2.2"
rand = "0.8"
serde_json = "1.0"
num-bigint = "0.4"
hex = "0.4"

